--- a/SimplePaint/Properties/Resources.resx
+++ b/SimplePaint/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="freehand_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\freehand_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hand_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hand_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="opened_folder_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\opened_folder_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
