--- a/SimplePaint/Properties/Resources.resx
+++ b/SimplePaint/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="eraser_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eraser_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="find_and_replace_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\find_and_replace_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="freehand_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\freehand_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -156,5 +159,11 @@
   </data>
   <data name="undo_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\undo_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="zoom_in_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zoom_in_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="zoom_out_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zoom_out_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
