--- a/SimplePaint/Properties/Resources.resx
+++ b/SimplePaint/Properties/Resources.resx
@@ -127,11 +127,17 @@
   <data name="create_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\create_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="drag_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\drag_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ellipse_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ellipse_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="eraser_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eraser_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fill_color_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fill_color_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="find_and_replace_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\find_and_replace_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
