--- a/SimplePaint/Properties/Resources.resx
+++ b/SimplePaint/Properties/Resources.resx
@@ -154,6 +154,9 @@
   <data name="pencil_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pencil_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pichon_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pichon_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="rectangle_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rectangle_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
